--- a/package.json
+++ b/package.json
@@ -9,19 +9,34 @@
   "start-development": "npm install &&  npm update -S && ./node_modules/.bin/nodemon ./app/main.js",
   "start-production": "node ./app/main.js",
   "test": "echo \"Placeholder tests.\""
+ },
  "author": "Atchai <enquiries@atchai.com> (https://atchai.com)",
  "dependencies": {
+  "body-parser": "^1.18.2",
+  "clean-webpack-plugin": "^0.1.17",
+  "compression": "^1.7.1",
+  "cookie-parser": "^1.4.3",
+  "express": "^4.16.2",
+  "express-basic-auth": "^1.1.3",
+  "express-handlebars": "^3.0.0",
+  "html-webpack-plugin": "^2.30.1",
+  "moment": "^2.19.1",
+  "trawler-std": "^0.3.7",
+  "vue": "^2.5.3",
+  "webpack": "^3.8.1"
+ },
+ "devDependencies": {
+  "eslint": "latest",
+  "eslint-config-recombix": "^0.2.6",
+  "eslint-plugin-filenames": "latest",
+  "eslint-plugin-json": "latest",
+  "eslint-plugin-node": "latest",
+  "eslint-plugin-promise": "latest",
+  "ngrok": "^2.2.23",
+  "nodemon": "^1.12.1"
+ },
   },
   },
-  "devDependencies": {
-    "eslint": "latest",
-    "eslint-config-recombix": "latest",
-    "eslint-plugin-filenames": "latest",
-    "eslint-plugin-json": "latest",
-    "eslint-plugin-node": "latest",
-    "eslint-plugin-promise": "latest",
-    "ngrok": "^2.2.23",
-    "nodemon": "^1.12.1"
   }
  },
  "engines": {
