--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
  "main": "app/backend/main.js",
  "scripts": {
   "ngrok": "ngrok http 6000 --region eu -subdomain=eyewitness",
-  "start-development": "npm install && npm update -S && webpack --display-error-details && trawler --debug --stdall",
+  "start-local": "concurrently \"npm run watch\" \"trawler --debug --stdall\"",
+  "start-development": "npm install && npm update -S && npm run start-local",
   "start-production": "trawler --stdall --plain",
-  "test": "echo \"Placeholder tests.\""
+  "build": "webpack --display-error-details",
+  "watch": "webpack --display-error-details --watch",
+  "test": "echo \"Tests not implemented!\""
  },
  "author": "Atchai <enquiries@atchai.com> (https://atchai.com)",
  "dependencies": {
