--- a/package.json
+++ b/package.json
@@ -20,17 +20,23 @@
   "compression": "^1.7.1",
   "config-ninja": "^1.1.0",
   "cookie-parser": "^1.4.3",
+  "css-loader": "^0.28.7",
   "express": "^4.16.2",
   "express-basic-auth": "^1.1.3",
   "express-handlebars": "^3.0.0",
+  "extract-text-webpack-plugin": "^3.0.2",
   "eyewitness": "git+ssh://git@github.com/atchai/eyewitness.git#master",
   "html-webpack-plugin": "^2.30.1",
   "moment": "^2.19.1",
+  "node-sass": "^4.6.0",
+  "sass-loader": "^6.0.6",
+  "style-loader": "^0.19.0",
   "trawler-std": "^0.3.7",
   "vue": "^2.5.3",
   "webpack": "^3.8.1"
  },
  "devDependencies": {
+  "concurrently": "^3.5.0",
   "eslint": "latest",
   "eslint-config-recombix": "^0.2.6",
   "eslint-plugin-filenames": "latest",
