Add options for sass-loader

--- a/app/config/development.config.json
+++ b/app/config/development.config.json
@@ -1,6 +1,8 @@
 {
 	"build": {
-		"useStyleLoader": false,
-		"webpackStats": "verbose"
+		"webpackStats": "verbose",
+		"useStyleLoader": true,
+		"sassOutputStyle": "expanded",
+		"sassSourceComments": true
 	}
 }
