--- a/app/config/staging.config.json
+++ b/app/config/staging.config.json
@@ -1,6 +1,8 @@
 {
 	"build": {
+		"webpackStats": "verbose",
 		"useStyleLoader": false,
-		"webpackStats": "errors-only"
+		"sassOutputStyle": "compressed",
+		"sassSourceComments": false
 	}
 }
