--- a/package.json
+++ b/package.json
@@ -16,35 +16,39 @@
  "author": "Atchai <enquiries@atchai.com> (https://atchai.com)",
  "dependencies": {
   "body-parser": "^1.18.2",
-  "clean-webpack-plugin": "^0.1.17",
   "compression": "^1.7.1",
   "config-ninja": "^1.1.0",
   "cookie-parser": "^1.4.3",
-  "css-loader": "^0.28.7",
   "express": "^4.16.2",
   "express-basic-auth": "^1.1.3",
   "express-handlebars": "^3.0.0",
-  "extract-text-webpack-plugin": "^3.0.2",
   "eyewitness": "git+ssh://git@github.com/atchai/eyewitness.git#master",
-  "html-webpack-plugin": "^2.30.1",
   "moment": "^2.19.1",
-  "node-sass": "^4.6.0",
-  "sass-loader": "^6.0.6",
-  "style-loader": "^0.19.0",
-  "trawler-std": "^0.3.7",
-  "vue": "^2.5.3",
-  "webpack": "^3.8.1"
+  "trawler-std": "^0.3.7"
  },
  "devDependencies": {
+  "babel-core": "^6.26.0",
+  "babel-loader": "^7.1.2",
+  "babel-preset-env": "^1.6.1",
+  "clean-webpack-plugin": "^0.1.17",
   "concurrently": "^3.5.0",
+  "css-loader": "^0.28.7",
   "eslint": "latest",
   "eslint-config-recombix": "^0.2.6",
   "eslint-plugin-filenames": "latest",
   "eslint-plugin-json": "latest",
   "eslint-plugin-node": "latest",
   "eslint-plugin-promise": "latest",
+  "extract-text-webpack-plugin": "^3.0.2",
+  "html-webpack-plugin": "^2.30.1",
   "ngrok": "^2.2.23",
-  "nodemon": "^1.12.1"
+  "node-sass": "^4.6.0",
+  "nodemon": "^1.12.1",
+  "normalize.css": "^7.0.0",
+  "sass-loader": "^6.0.6",
+  "style-loader": "^0.19.0",
+  "vue": "^2.5.3",
+  "webpack": "^3.8.1"
  },
  "trawler": {
   "crash": {
