--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   "trawler-std": "^0.3.7"
  },
  "devDependencies": {
+  "autoprefixer": "^7.1.6",
   "babel-core": "^6.26.0",
   "babel-loader": "^7.1.2",
+  "babel-minify-webpack-plugin": "^0.2.0",
   "babel-preset-env": "^1.6.1",
   "clean-webpack-plugin": "^0.1.17",
   "concurrently": "^3.5.0",
@@ -45,6 +47,7 @@
   "node-sass": "^4.6.0",
   "nodemon": "^1.12.1",
   "normalize.css": "^7.0.0",
+  "postcss-loader": "^2.0.8",
   "sass-loader": "^6.0.6",
   "style-loader": "^0.19.0",
   "vue": "^2.5.3",
