Compress CSS in production

--- a/app/config/development.config.json
+++ b/app/config/development.config.json
@@ -3,6 +3,7 @@
 		"webpackStats": "verbose",
 		"useStyleLoader": true,
 		"sassOutputStyle": "expanded",
-		"sassSourceComments": true
+		"sassSourceComments": true,
+		"compressCss": false,
 	}
 }
