--- a/app/config/staging.config.json
+++ b/app/config/staging.config.json
@@ -3,6 +3,7 @@
 		"webpackStats": "verbose",
 		"useStyleLoader": false,
 		"sassOutputStyle": "compressed",
-		"sassSourceComments": false
+		"sassSourceComments": false,
+		"compressCss": true,
 	}
 }
