Don't compress HTML in development

--- a/app/config/development.config.json
+++ b/app/config/development.config.json
@@ -4,6 +4,7 @@
 		"useStyleLoader": true,
 		"sassOutputStyle": "expanded",
 		"sassSourceComments": true,
+		"compressHtml": false,
 		"compressCss": false,
 		"compressJs": false
 	}
