Remove staging config that is the same as production config

--- a/app/config/staging.config.json
+++ b/app/config/staging.config.json
@@ -1,10 +1,5 @@
 {
 	"build": {
-		"webpackStats": "verbose",
-		"useStyleLoader": false,
-		"sassOutputStyle": "compressed",
-		"sassSourceComments": false,
-		"compressCss": true,
-		"compressJs": true
+		"webpackStats": "verbose"
 	}
 }
