--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
   "sass-loader": "^6.0.6",
   "style-loader": "^0.19.0",
   "vue": "^2.5.3",
+  "vue-loader": "^13.5.0",
+  "vue-template-compiler": "^2.5.3",
   "webpack": "^3.8.1"
  },
  "trawler": {
