--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "express-basic-auth": "^1.1.3",
   "express-handlebars": "^3.0.0",
   "eyewitness": "git+ssh://git@github.com/atchai/eyewitness.git#master",
-  "moment": "^2.19.1",
+  "moment": "^2.19.2",
   "trawler-std": "^0.3.7"
  },
  "devDependencies": {
@@ -35,16 +35,19 @@
   "clean-webpack-plugin": "^0.1.17",
   "concurrently": "^3.5.0",
   "css-loader": "^0.28.7",
-  "eslint": "latest",
-  "eslint-config-recombix": "^0.2.6",
+  "eslint": "^4.11.0",
+  "eslint-config-recombix": "^0.3.2",
+  "eslint-config-vue": "latest",
+  "eslint-plugin-disable": "latest",
   "eslint-plugin-filenames": "latest",
   "eslint-plugin-json": "latest",
   "eslint-plugin-node": "latest",
   "eslint-plugin-promise": "latest",
+  "eslint-plugin-vue": "latest",
   "extract-text-webpack-plugin": "^3.0.2",
   "html-webpack-plugin": "^2.30.1",
   "ngrok": "^2.2.23",
-  "node-sass": "^4.6.0",
+  "node-sass": "^4.6.1",
   "nodemon": "^1.12.1",
   "normalize.css": "^7.0.0",
   "postcss-loader": "^2.0.8",
@@ -52,6 +55,7 @@
   "style-loader": "^0.19.0",
   "vue": "^2.5.3",
   "vue-loader": "^13.5.0",
+  "vue-router": "^3.0.1",
   "vue-template-compiler": "^2.5.3",
   "webpack": "^3.8.1"
  },
