--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "express-handlebars": "^3.0.0",
   "eyewitness": "git+ssh://git@github.com/atchai/eyewitness.git#master",
   "moment": "^2.19.2",
+  "socket.io": "^2.0.4",
   "trawler-std": "^0.3.7"
  },
  "devDependencies": {
@@ -35,11 +36,13 @@
   "clean-webpack-plugin": "^0.1.17",
   "concurrently": "^3.5.0",
   "css-loader": "^0.28.7",
+  "dialog-polyfill": "^0.4.9",
   "eslint": "^4.11.0",
   "eslint-config-recombix": "^0.3.2",
   "eslint-config-vue": "latest",
   "eslint-plugin-disable": "latest",
   "eslint-plugin-filenames": "latest",
+  "eslint-plugin-html": "latest",
   "eslint-plugin-json": "latest",
   "eslint-plugin-node": "latest",
   "eslint-plugin-promise": "latest",
@@ -52,6 +55,7 @@
   "normalize.css": "^7.0.0",
   "postcss-loader": "^2.0.8",
   "sass-loader": "^6.0.6",
+  "sass-resources-loader": "^1.3.1",
   "style-loader": "^0.19.0",
   "vue": "^2.5.3",
   "vue-loader": "^13.5.0",
