Lint JS files before building the frontend

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "start-local": "concurrently \"npm run watch\" \"trawler --debug --stdall\"",
   "start-development": "npm install && npm update -S && npm run start-local",
   "start-production": "trawler --stdall --plain",
-  "build": "webpack --display-error-details",
+  "build": "npm run lint && webpack --display-error-details",
   "watch": "webpack --display-error-details --watch",
   "lint": "eslint --ext js,vue ./app/backend ./app/frontend/source",
   "test": "echo \"Tests not implemented!\""
