--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "express": "^4.16.2",
   "express-basic-auth": "^1.1.3",
   "express-handlebars": "^3.0.0",
-  "eyewitness": "git+ssh://git@github.com/atchai/eyewitness.git#master",
+  "eyewitness": "git+ssh://git@github.com/atchai/eyewitness.git",
   "moment": "^2.19.2",
   "socket.io": "^2.0.4",
   "trawler-std": "^0.3.7"
@@ -57,11 +57,13 @@
   "postcss-loader": "^2.0.8",
   "sass-loader": "^6.0.6",
   "sass-resources-loader": "^1.3.1",
+  "socket.io-client": "^2.0.4",
   "style-loader": "^0.19.0",
   "vue": "^2.5.3",
   "vue-loader": "^13.5.0",
   "vue-router": "^3.0.1",
   "vue-template-compiler": "^2.5.3",
+  "vuex": "^3.0.1",
   "webpack": "^3.8.1"
  },
  "trawler": {
