--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
  "scripts": {
   "ngrok": "ngrok http 6000 --region eu -subdomain=eyewitness",
   "start-local": "concurrently \"npm run watch\" \"trawler --debug --stdall\"",
-  "start-development": "npm install && npm update -S && npm run start-local",
+  "start-development": "npm install && npm run start-local",
   "start-production": "trawler --stdall --plain",
   "build": "npm run lint && webpack --display-error-details",
   "watch": "webpack --display-error-details --watch",
