--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "babel-loader": "^7.1.2",
   "babel-minify-webpack-plugin": "^0.2.0",
   "babel-preset-env": "^1.6.1",
+  "bson-objectid": "^1.2.1",
   "clean-webpack-plugin": "^0.1.17",
   "concurrently": "^3.5.0",
   "css-loader": "^0.28.7",
@@ -51,7 +52,7 @@
   "extract-text-webpack-plugin": "^3.0.2",
   "html-webpack-plugin": "^2.30.1",
   "ngrok": "^2.2.23",
-  "node-sass": "^4.6.1",
+  "node-sass": "^4.7.2",
   "nodemon": "^1.12.1",
   "normalize.css": "^7.0.0",
   "postcss-loader": "^2.0.8",
