--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "babel-core": "^6.26.0",
   "babel-loader": "^7.1.2",
   "babel-minify-webpack-plugin": "^0.2.0",
+  "babel-plugin-transform-object-rest-spread": "^6.26.0",
   "babel-preset-env": "^1.6.1",
   "bson-objectid": "^1.2.1",
   "clean-webpack-plugin": "^0.1.17",
