Add credentials for the bot task

--- a/app/config/production.config.json
+++ b/app/config/production.config.json
@@ -9,6 +9,7 @@
 		},
 		"basicAuth": {
 			"users": {
+				"bot": "HN1r9OVx5AO15TlbtpKq0e7oQWASiZ",
 				"atchai": "d18HO8SrMbabv5Qq3KXk",
 				"battabox": "9OVx5AO15TlbtpKq0e7o",
 				"sabc": "1iAEqHN1rQWASiZnwAyr",
