--- a/app/config/production.config.json
+++ b/app/config/production.config.json
@@ -17,6 +17,10 @@
 			}
 		}
 	},
+	"hippocamp": {
+		"url": "http://bot:5000/api/adapter/web",
+		"accessToken": "BO4AHX72iCGqQIbdbu62q08PQHOCmHoRPlkxkv4Y"
+	},
 	"build": {
 		"webpackStats": "errors-only",
 		"useStyleLoader": false,
