--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "node-sass": "^4.7.2",
   "nodemon": "^1.12.1",
   "normalize.css": "^7.0.0",
+  "object-extender": "^2.0.3",
   "postcss-loader": "^2.0.8",
   "sass-loader": "^6.0.6",
   "sass-resources-loader": "^1.3.1",
