--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "start-development": "npm install && npm run start-local",
   "start-production": "trawler --stdall --plain",
   "deploy": "node ./scripts/deploy/deploy",
-  "build": "npm run lint && webpack --display-error-details",
+  "build": "webpack --display-error-details",
   "watch": "webpack --display-error-details --watch",
   "lint": "eslint --ext js,vue ./app/backend ./app/frontend/source",
   "test": "echo \"Tests not implemented!\""
