--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "start-development": "npm install && npm run start-local",
   "start-production": "trawler --stdall --plain",
   "deploy": "node ./scripts/deploy/deploy",
+  "deploy-all-production": "npm run deploy minor battabox production && npm run deploy existing sabc production && npm run deploy existing thestar production",
   "build": "webpack --display-error-details",
   "watch": "webpack --display-error-details --watch",
   "lint": "eslint --ext js,vue ./app/backend ./app/frontend/source",
