--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "compression": "^1.7.1",
   "config-ninja": "^1.1.0",
   "cookie-parser": "^1.4.3",
+  "deep-sort": "^0.1.0",
   "express": "^4.16.2",
   "express-basic-auth": "^1.1.3",
   "express-handlebars": "^3.0.0",
