Include Facebook page IDs in config

--- a/app/config/development.config.json
+++ b/app/config/development.config.json
@@ -16,6 +16,7 @@
 			"connectionString": "mongodb://mongodb:27017/eyewitness"
 		}
 	},
+	"facebookPageId": "amitygazette",
 	"hippocampServer": {
 		"baseUrl": "http://bot:5000"
 	}
