--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   "css-loader": "^0.28.7",
   "dialog-polyfill": "^0.4.9",
   "eslint": "^4.11.0",
-  "eslint-config-recombix": "^0.3.2",
+  "eslint-config-recombix": "latest",
   "eslint-config-vue": "latest",
   "eslint-plugin-disable": "latest",
   "eslint-plugin-filenames": "latest",
@@ -69,6 +69,7 @@
   "vue": "^2.5.3",
   "vue-loader": "^13.5.0",
   "vue-router": "^3.0.1",
+  "vue-scroll": "^2.1.6",
   "vue-template-compiler": "^2.5.3",
   "vuex": "^3.0.1",
   "webpack": "^3.8.1"
