Improve webpack source mapping

--- a/app/config/development.config.json
+++ b/app/config/development.config.json
@@ -4,6 +4,7 @@
 	},
 	"build": {
 		"webpackStats": "verbose",
+		"sourceMapMode": "cheap-module-eval-source-map",
 		"useStyleLoader": true,
 		"sassOutputStyle": "expanded",
 		"sassSourceComments": true,
