Rename page size configs

--- a/app/config/production.config.json
+++ b/app/config/production.config.json
@@ -18,8 +18,8 @@
 		}
 	},
 	"facebookPageId": null,
-	"pageSize": 20,
-	"pageIncrement": 5,
+	"pageInitialSize": 20,
+	"pageBufferSize": 5,
 	"build": {
 		"webpackStats": "errors-only",
 		"sourceMapMode": false,
