Make the scroll throttle threshold value a variable

--- a/app/config/production.config.json
+++ b/app/config/production.config.json
@@ -20,6 +20,7 @@
 	"facebookPageId": null,
 	"pageInitialSize": 20,
 	"pageBufferSize": 5,
+	"scrollThrottleThreshold": 200,
 	"build": {
 		"webpackStats": "errors-only",
 		"sourceMapMode": false,
