Add missing page title config to home view

--- a/app/config/production.config.json
+++ b/app/config/production.config.json
@@ -17,10 +17,11 @@
 			}
 		}
 	},
-	"facebookPageId": null,
+	"pageTitle": "Eyewitness UI",
 	"pageInitialSize": 20,
 	"pageBufferSize": 5,
 	"scrollThrottleThreshold": 200,
+	"facebookPageId": null,
 	"build": {
 		"webpackStats": "errors-only",
 		"sourceMapMode": false,
