Add new Heroku deployment package scripts

--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
  "description": "User interface to allow admins to interact with their Eyewitness bot.",
  "main": "app/backend/main.js",
  "scripts": {
+  "deploy-all-production": "npm run deploy-demo && npm run deploy-battabox && npm run deploy-sabc && npm run deploy-thestar",
+  "deploy-demo-production": "heroku container:push web -a eyewitness-ui-demo",
+  "deploy-battabox-production": "heroku container:push web -a eyewitness-ui-battabox",
+  "deploy-sabc-production": "heroku container:push web -a eyewitness-ui-sabc",
+  "deploy-thestar-production": "heroku container:push web -a eyewitness-ui-thestar",
   "ngrok": "ngrok http 6000 --region eu -subdomain=eyewitness",
   "start-local": "concurrently \"npm run watch\" \"trawler --debug --stdall\"",
   "start-development": "npm install && npm run start-local",
   "start-production": "trawler --stdall --plain",
-  "deploy": "node ./scripts/deploy/deploy",
-  "deploy-all-production": "npm run deploy minor battabox production && npm run deploy existing sabc production && npm run deploy existing thestar production",
   "build": "webpack --display-error-details",
   "watch": "webpack --display-error-details --watch",
   "lint": "eslint --ext js,vue ./app/backend ./app/frontend/source",
