--- a/package.json
+++ b/package.json
@@ -70,12 +70,14 @@
   "node-sass": "^4.7.2",
   "nodemon": "^1.12.1",
   "normalize.css": "^7.0.0",
+  "npm-install-webpack-plugin": "^4.0.5",
   "object-extender": "^2.0.3",
   "postcss-loader": "^2.0.8",
   "sass-loader": "^6.0.6",
   "sass-resources-loader": "^1.3.1",
   "socket.io-client": "^2.0.4",
   "style-loader": "^0.19.0",
+  "uglifyjs-webpack-plugin": "^1.1.6",
   "vue": "^2.5.3",
   "vue-loader": "^13.5.0",
   "vue-router": "^3.0.1",
