Set a max age for static resources

--- a/app/config/production.config.json
+++ b/app/config/production.config.json
@@ -22,6 +22,9 @@
 	"pageBufferSize": 5,
 	"scrollThrottleThreshold": 200,
 	"facebookPageId": null,
+	"caching": {
+		"maxAge": "7d"
+	},
 	"build": {
 		"webpackStats": "errors-only",
 		"sourceMapMode": false,
