Remove demo deployment commands

--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
  "description": "User interface to allow admins to interact with their Eyewitness bot.",
  "main": "app/backend/main.js",
  "scripts": {
-  "deploy-all-production": "npm run deploy-demo-production && npm run deploy-battabox-production && npm run deploy-sabc-production && npm run deploy-thestar-production",
-  "deploy-demo-production": "heroku container:push web -a eyewitness-ui-demo",
+  "deploy-all-production": "npm run deploy-battabox-production && npm run deploy-sabc-production && npm run deploy-thestar-production",
   "deploy-battabox-production": "heroku container:push web -a eyewitness-ui-battabox",
   "deploy-sabc-production": "heroku container:push web -a eyewitness-ui-sabc",
   "deploy-thestar-production": "heroku container:push web -a eyewitness-ui-thestar",
-  "deploy-all-staging": "npm run deploy-demo-staging && npm run deploy-battabox-staging && npm run deploy-sabc-staging && npm run deploy-thestar-staging",
-  "deploy-demo-staging": "heroku container:push web -a eyewitness-ui-demo-staging",
+  "deploy-all-staging": "npm run deploy-battabox-staging && npm run deploy-sabc-staging && npm run deploy-thestar-staging",
   "deploy-battabox-staging": "heroku container:push web -a eyewitness-ui-battabox-stag",
   "deploy-sabc-staging": "heroku container:push web -a eyewitness-ui-sabc-staging",
   "deploy-thestar-staging": "heroku container:push web -a eyewitness-ui-thestar-staging",
