Update package deployment scripts

--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
  "main": "app/backend/main.js",
  "scripts": {
   "deploy-all-production": "npm run deploy-battabox-production && npm run deploy-sabc-production && npm run deploy-thestar-production",
-  "deploy-battabox-production": "heroku container:push web -a eyewitness-ui-battabox",
-  "deploy-sabc-production": "heroku container:push web -a eyewitness-ui-sabc",
-  "deploy-thestar-production": "heroku container:push web -a eyewitness-ui-thestar",
+  "deploy-battabox-production": "docker build -f Dockerfile -t registry.heroku.com/eyewitness-ui-battabox/web . && docker push registry.heroku.com/eyewitness-ui-battabox/web",
+  "deploy-sabc-production": "docker build -f Dockerfile -t registry.heroku.com/eyewitness-ui-sabc/web . && docker push registry.heroku.com/eyewitness-ui-sabc/web",
+  "deploy-thestar-production": "docker build -f Dockerfile -t registry.heroku.com/eyewitness-ui-thestar/web . && docker push registry.heroku.com/eyewitness-ui-thestar/web",
   "deploy-all-staging": "npm run deploy-battabox-staging && npm run deploy-sabc-staging && npm run deploy-thestar-staging",
-  "deploy-battabox-staging": "heroku container:push web -a eyewitness-ui-battabox-stag",
-  "deploy-sabc-staging": "heroku container:push web -a eyewitness-ui-sabc-staging",
-  "deploy-thestar-staging": "heroku container:push web -a eyewitness-ui-thestar-staging",
+  "deploy-battabox-staging": "docker build -f Dockerfile.staging -t registry.heroku.com/eyewitness-ui-battabox-stag/web . && docker push registry.heroku.com/eyewitness-ui-battabox-stag/web",
+  "deploy-sabc-staging": "docker build -f Dockerfile.staging -t registry.heroku.com/eyewitness-ui-sabc-staging/web . && docker push registry.heroku.com/eyewitness-ui-sabc-staging/web",
+  "deploy-thestar-staging": "docker build -f Dockerfile.staging -t registry.heroku.com/eyewitness-ui-thestar-staging/web . && docker push registry.heroku.com/eyewitness-ui-thestar-staging/web",
   "ngrok": "ngrok http 6000 --region eu -subdomain=eyewitness",
   "start-local": "concurrently \"npm run watch\" \"trawler --debug --stdall\"",
   "start-development": "npm install && npm run start-local",
