Flow editor from demo (format needs updating)

--- a/package.json
+++ b/package.json
@@ -24,35 +24,39 @@
  },
  "author": "Atchai <enquiries@atchai.com> (https://atchai.com)",
  "dependencies": {
+  "aws-sdk": "^2.228.1",
   "body-parser": "^1.18.2",
-  "compression": "^1.7.1",
+  "compression": "^1.7.2",
   "config-ninja": "^1.1.0",
   "cookie-parser": "^1.4.3",
-  "deep-sort": "^0.1.0",
+  "deep-sort": "^0.1.2",
   "express": "^4.16.2",
   "express-basic-auth": "^1.1.3",
   "express-handlebars": "^3.0.0",
   "eyewitness": "git+ssh://git@github.com/atchai/eyewitness.git#v2.5.0",
   "moment": "^2.19.2",
   "request-ninja": "^0.2.6",
+  "shortid": "^2.2.8",
   "socket.io": "^2.0.4",
-  "trawler-std": "^0.3.7"
+  "trawler-std": "^0.3.7",
+  "vuedraggable": "^2.16.0"
  },
  "devDependencies": {
-  "autoprefixer": "^7.1.6",
+  "autoprefixer": "^7.2.4",
   "babel-core": "^6.26.0",
-  "babel-eslint": "^8.0.3",
-  "babel-loader": "^7.1.2",
+  "babel-eslint": "^8.2.2",
+  "babel-loader": "^7.1.3",
   "babel-minify-webpack-plugin": "^0.2.0",
   "babel-plugin-syntax-dynamic-import": "^6.18.0",
   "babel-plugin-transform-object-rest-spread": "^6.26.0",
   "babel-plugin-transform-runtime": "^6.23.0",
   "babel-preset-env": "^1.6.1",
-  "bson-objectid": "^1.2.1",
+  "bson-objectid": "^1.2.2",
   "clean-webpack-plugin": "^0.1.17",
   "concurrently": "^3.5.0",
-  "css-loader": "^0.28.7",
-  "eslint": "^4.11.0",
+  "css-loader": "^0.28.10",
+  "dialog-polyfill": "^0.4.9",
+  "eslint": "^4.18.1",
   "eslint-config-recombix": "latest",
   "eslint-config-vue": "latest",
   "eslint-plugin-disable": "latest",
@@ -64,13 +68,13 @@
   "eslint-plugin-vue": "latest",
   "extract-text-webpack-plugin": "^3.0.2",
   "html-webpack-plugin": "^2.30.1",
-  "ngrok": "^2.2.23",
+  "ngrok": "=2.2.22",
   "node-sass": "^4.7.2",
-  "nodemon": "^1.12.1",
+  "nodemon": "^1.17.1",
   "normalize.css": "^7.0.0",
   "npm-install-webpack-plugin": "^4.0.5",
   "object-extender": "^2.0.3",
-  "postcss-loader": "^2.0.8",
+  "postcss-loader": "^2.1.1",
   "sass-loader": "^6.0.6",
   "sass-resources-loader": "^1.3.1",
   "socket.io-client": "^2.0.4",
@@ -110,6 +114,6 @@
  },
  "browserslist": [
   "last 2 versions",
-  "> 2.0%"
+  "> 0.5%"
  ]
 }
