--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "deploy-thestar-staging": "docker build -f Dockerfile.staging -t registry.heroku.com/eyewitness-ui-thestar-staging/web . && docker push registry.heroku.com/eyewitness-ui-thestar-staging/web",
   "ngrok": "ngrok http 6000 --region eu -subdomain=eyewitness",
   "start-local": "concurrently \"npm run watch\" \"trawler --debug --stdall\"",
+  "start": "npm run start-local",
   "start-development": "npm install && npm run start-local",
   "start-production": "trawler --stdall --plain",
   "build": "webpack --display-error-details",
@@ -33,7 +34,7 @@
   "express": "^4.16.2",
   "express-basic-auth": "^1.1.3",
   "express-handlebars": "^3.0.0",
-  "eyewitness": "git+ssh://git@github.com/atchai/eyewitness.git#v2.5.0",
+  "eyewitness": "git+ssh://git@github.com/atchai/eyewitness.git#develop",
   "moment": "^2.19.2",
   "request-ninja": "^0.2.6",
   "shortid": "^2.2.8",
