Flow editor: reference handling and further format updates

--- a/app/config/development.config.json
+++ b/app/config/development.config.json
@@ -20,5 +20,8 @@
 	"facebookPageId": "amitygazette",
 	"hippocampServer": {
 		"baseUrl": "http://bot:5000"
+	},
+	"amazonS3": {
+		"keyPrefix": "development/demo/"
 	}
 }
