--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
   "request-ninja": "^0.3.2",
   "shortid": "^2.2.8",
   "socket.io": "^2.1.0",
-  "trawler-std": "^0.3.7",
-  "vuedraggable": "^2.16.0"
+  "trawler-std": "^0.3.7"
  },
  "devDependencies": {
   "autoprefixer": "^8.3.0",
@@ -82,6 +81,7 @@
   "style-loader": "^0.21.0",
   "uglifyjs-webpack-plugin": "^1.1.6",
   "vue": "^2.5.3",
+  "vuedraggable": "^2.16.0",
   "vue-loader": "^13.5.0",
   "vue-router": "^3.0.1",
   "vue-scroll": "^2.1.6",
