Add demo deployments

--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
  "description": "User interface to allow admins to interact with their Eyewitness bot.",
  "main": "app/backend/main.js",
  "scripts": {
-  "deploy-all-production": "npm run deploy-battabox-production && npm run deploy-sabc-production && npm run deploy-thestar-production",
+  "deploy-all-production": "npm run deploy-demo-production && npm run deploy-battabox-production && npm run deploy-sabc-production && npm run deploy-thestar-production",
+  "deploy-demo-production": "docker build -f Dockerfile -t registry.heroku.com/eyewitness-ui-demo/web . && docker push registry.heroku.com/eyewitness-ui-demo/web",
   "deploy-battabox-production": "docker build -f Dockerfile -t registry.heroku.com/eyewitness-ui-battabox/web . && docker push registry.heroku.com/eyewitness-ui-battabox/web",
   "deploy-sabc-production": "docker build -f Dockerfile -t registry.heroku.com/eyewitness-ui-sabc/web . && docker push registry.heroku.com/eyewitness-ui-sabc/web",
   "deploy-thestar-production": "docker build -f Dockerfile -t registry.heroku.com/eyewitness-ui-thestar/web . && docker push registry.heroku.com/eyewitness-ui-thestar/web",
-  "deploy-all-staging": "npm run deploy-battabox-staging && npm run deploy-sabc-staging && npm run deploy-thestar-staging",
+  "deploy-all-staging": "npm run deploy-demo-staging && npm run deploy-battabox-staging && npm run deploy-sabc-staging && npm run deploy-thestar-staging",
+  "deploy-demo-staging": "docker build -f Dockerfile.staging -t registry.heroku.com/eyewitness-ui-demo-staging/web . && docker push registry.heroku.com/eyewitness-ui-demo-staging/web",
   "deploy-battabox-staging": "docker build -f Dockerfile.staging -t registry.heroku.com/eyewitness-ui-battabox-stag/web . && docker push registry.heroku.com/eyewitness-ui-battabox-stag/web",
   "deploy-sabc-staging": "docker build -f Dockerfile.staging -t registry.heroku.com/eyewitness-ui-sabc-staging/web . && docker push registry.heroku.com/eyewitness-ui-sabc-staging/web",
   "deploy-thestar-staging": "docker build -f Dockerfile.staging -t registry.heroku.com/eyewitness-ui-thestar-staging/web . && docker push registry.heroku.com/eyewitness-ui-thestar-staging/web",
