--- a/app/config/providers/battabox.production.config.json
+++ b/app/config/providers/battabox.production.config.json
@@ -10,5 +10,8 @@
 	"facebookPageId": "battabox",
 	"hippocampServer": {
 		"baseUrl": "https://eyewitness-bot-battabox.atchai.com"
+	},
+	"amazonS3": {
+		"keyPrefix": "production/battabox/"
 	}
 }
