--- a/app/config/providers/thestar.production.config.json
+++ b/app/config/providers/thestar.production.config.json
@@ -10,5 +10,8 @@
 	"facebookPageId": "TheStarKenya",
 	"hippocampServer": {
 		"baseUrl": "https://eyewitness-bot-thestar.atchai.com"
+	},
+	"amazonS3": {
+		"keyPrefix": "production/thestar/"
 	}
 }
