--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
  },
  "author": "Atchai <enquiries@atchai.com> (https://atchai.com)",
  "dependencies": {
-  "aws-sdk": "^2.238.1",
-  "body-parser": "^1.18.2",
+  "aws-sdk": "^2.250.1",
+  "body-parser": "^1.18.3",
   "compression": "^1.7.2",
   "config-ninja": "^1.1.0",
   "cookie-parser": "^1.4.3",
@@ -36,15 +36,15 @@
   "express": "^4.16.3",
   "express-basic-auth": "^1.1.5",
   "express-handlebars": "^3.0.0",
-  "eyewitness": "git+ssh://git@github.com/atchai/eyewitness.git#develop",
-  "moment": "^2.22.1",
+  "eyewitness": "git+ssh://git@github.com/atchai/eyewitness.git#v3.0.0",
+  "moment": "^2.22.2",
   "request-ninja": "^0.3.2",
   "shortid": "^2.2.8",
-  "socket.io": "^2.1.0",
+  "socket.io": "^2.1.1",
   "trawler-std": "^0.3.7"
  },
  "devDependencies": {
-  "autoprefixer": "^8.4.1",
+  "autoprefixer": "^8.6.0",
   "babel-core": "^6.26.3",
   "babel-eslint": "^8.2.2",
   "babel-loader": "^7.1.3",
@@ -72,18 +72,18 @@
   "html-webpack-plugin": "^3.2.0",
   "ngrok": "=2.2.22",
   "node-sass": "^4.9.0",
-  "nodemon": "^1.17.4",
+  "nodemon": "^1.17.5",
   "normalize.css": "^7.0.0",
   "npm-install-webpack-plugin": "^4.0.5",
   "object-extender": "^2.0.4",
   "postcss-loader": "^2.1.5",
-  "sass-loader": "^7.0.1",
+  "sass-loader": "^7.0.2",
   "sass-resources-loader": "^1.3.3",
-  "socket.io-client": "^2.1.0",
+  "socket.io-client": "^2.1.1",
   "style-loader": "^0.21.0",
   "uglifyjs-webpack-plugin": "^1.2.5",
   "vue": "^2.5.16",
-  "vue-loader": "^13.7.1",
+  "vue-loader": "^13.7.2",
   "vue-router": "^3.0.1",
   "vue-scroll": "^2.1.7",
   "vue-template-compiler": "^2.5.16",
