Update deployment commands w/Heroku changes

--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
  "main": "app/backend/main.js",
  "scripts": {
   "deploy-all-production": "npm run deploy-demo-production && npm run deploy-battabox-production && npm run deploy-sabc-production && npm run deploy-thestar-production",
-  "deploy-demo-production": "docker build -f Dockerfile -t registry.heroku.com/eyewitness-ui-demo/web . && docker push registry.heroku.com/eyewitness-ui-demo/web",
-  "deploy-battabox-production": "docker build -f Dockerfile -t registry.heroku.com/eyewitness-ui-battabox/web . && docker push registry.heroku.com/eyewitness-ui-battabox/web",
-  "deploy-sabc-production": "docker build -f Dockerfile -t registry.heroku.com/eyewitness-ui-sabc/web . && docker push registry.heroku.com/eyewitness-ui-sabc/web",
-  "deploy-thestar-production": "docker build -f Dockerfile -t registry.heroku.com/eyewitness-ui-thestar/web . && docker push registry.heroku.com/eyewitness-ui-thestar/web",
+  "deploy-demo-production": "docker build -f Dockerfile -t registry.heroku.com/eyewitness-ui-demo/web . && docker push registry.heroku.com/eyewitness-ui-demo/web && heroku container:release -a eyewitness-ui-demo web",
+  "deploy-battabox-production": "docker build -f Dockerfile -t registry.heroku.com/eyewitness-ui-battabox/web . && docker push registry.heroku.com/eyewitness-ui-battabox/web && heroku container:release -a eyewitness-ui-battabox web",
+  "deploy-sabc-production": "docker build -f Dockerfile -t registry.heroku.com/eyewitness-ui-sabc/web . && docker push registry.heroku.com/eyewitness-ui-sabc/web && heroku container:release -a eyewitness-ui-sabc web",
+  "deploy-thestar-production": "docker build -f Dockerfile -t registry.heroku.com/eyewitness-ui-thestar/web . && docker push registry.heroku.com/eyewitness-ui-thestar/web && heroku container:release -a eyewitness-ui-thestar web",
   "deploy-all-staging": "npm run deploy-demo-staging && npm run deploy-battabox-staging && npm run deploy-sabc-staging && npm run deploy-thestar-staging",
-  "deploy-demo-staging": "docker build -f Dockerfile.staging -t registry.heroku.com/eyewitness-ui-demo-staging/web . && docker push registry.heroku.com/eyewitness-ui-demo-staging/web",
-  "deploy-battabox-staging": "docker build -f Dockerfile.staging -t registry.heroku.com/eyewitness-ui-battabox-stag/web . && docker push registry.heroku.com/eyewitness-ui-battabox-stag/web",
-  "deploy-sabc-staging": "docker build -f Dockerfile.staging -t registry.heroku.com/eyewitness-ui-sabc-staging/web . && docker push registry.heroku.com/eyewitness-ui-sabc-staging/web",
-  "deploy-thestar-staging": "docker build -f Dockerfile.staging -t registry.heroku.com/eyewitness-ui-thestar-staging/web . && docker push registry.heroku.com/eyewitness-ui-thestar-staging/web",
+  "deploy-demo-staging": "docker build -f Dockerfile.staging -t registry.heroku.com/eyewitness-ui-demo-staging/web . && docker push registry.heroku.com/eyewitness-ui-demo-staging/web && heroku container:release -a eyewitness-ui-demo-staging web",
+  "deploy-battabox-staging": "docker build -f Dockerfile.staging -t registry.heroku.com/eyewitness-ui-battabox-stag/web . && docker push registry.heroku.com/eyewitness-ui-battabox-stag/web && heroku container:release -a eyewitness-ui-battabox-stag web",
+  "deploy-sabc-staging": "docker build -f Dockerfile.staging -t registry.heroku.com/eyewitness-ui-sabc-staging/web . && docker push registry.heroku.com/eyewitness-ui-sabc-staging/web && heroku container:release -a eyewitness-ui-sabc-staging web",
+  "deploy-thestar-staging": "docker build -f Dockerfile.staging -t registry.heroku.com/eyewitness-ui-thestar-staging/web . && docker push registry.heroku.com/eyewitness-ui-thestar-staging/web && heroku container:release -a eyewitness-ui-thestar-staging web",
   "ngrok": "ngrok http 6000 --region eu -subdomain=eyewitness",
   "start-local": "concurrently \"npm run watch\" \"trawler --debug --stdall\"",
   "start": "npm run start-local",
