--- a/package.json
+++ b/package.json
@@ -27,27 +27,26 @@
  },
  "author": "Atchai <enquiries@atchai.com> (https://atchai.com)",
  "dependencies": {
-  "aws-sdk": "^2.250.1",
+  "aws-sdk": "^2.279.1",
   "body-parser": "^1.18.3",
-  "compression": "^1.7.2",
-  "config-ninja": "^1.1.0",
+  "compression": "^1.7.3",
+  "config-ninja": "^1.3.2",
   "cookie-parser": "^1.4.3",
   "deep-sort": "^1.0.3",
   "express": "^4.16.3",
   "express-basic-auth": "^1.1.5",
   "express-handlebars": "^3.0.0",
-  "eyewitness": "git+ssh://git@github.com/atchai/eyewitness.git#v3.0.4",
   "moment": "^2.22.2",
   "request-ninja": "^0.3.2",
-  "shortid": "^2.2.8",
+  "shortid": "^2.2.12",
   "socket.io": "^2.1.1",
   "trawler-std": "^0.3.7"
  },
  "devDependencies": {
-  "autoprefixer": "^8.6.0",
+  "autoprefixer": "^8.6.5",
   "babel-core": "^6.26.3",
-  "babel-eslint": "^8.2.2",
-  "babel-loader": "^7.1.3",
+  "babel-eslint": "^8.2.6",
+  "babel-loader": "^7.1.5",
   "babel-minify-webpack-plugin": "^0.3.1",
   "babel-plugin-syntax-dynamic-import": "^6.18.0",
   "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -55,9 +54,9 @@
   "babel-preset-env": "^1.7.0",
   "bson-objectid": "^1.2.2",
   "clean-webpack-plugin": "^0.1.19",
-  "concurrently": "^3.5.1",
+  "concurrently": "^3.6.0",
   "css-loader": "^0.28.10",
-  "dialog-polyfill": "^0.4.9",
+  "dialog-polyfill": "^0.4.10",
   "eslint": "^4.18.1",
   "eslint-config-recombix": "latest",
   "eslint-config-vue": "latest",
@@ -71,17 +70,17 @@
   "extract-text-webpack-plugin": "^3.0.2",
   "html-webpack-plugin": "^3.2.0",
   "ngrok": "=2.2.22",
-  "node-sass": "^4.9.0",
-  "nodemon": "^1.17.5",
+  "node-sass": "^4.9.2",
+  "nodemon": "^1.18.3",
   "normalize.css": "^7.0.0",
   "npm-install-webpack-plugin": "^4.0.5",
   "object-extender": "^2.0.4",
-  "postcss-loader": "^2.1.5",
-  "sass-loader": "^7.0.2",
+  "postcss-loader": "^2.1.6",
+  "sass-loader": "^7.0.3",
   "sass-resources-loader": "^1.3.3",
   "socket.io-client": "^2.1.1",
   "style-loader": "^0.21.0",
-  "uglifyjs-webpack-plugin": "^1.2.5",
+  "uglifyjs-webpack-plugin": "^1.2.7",
   "vue": "^2.5.16",
   "vue-loader": "^13.7.2",
   "vue-router": "^3.0.1",
@@ -113,7 +112,8 @@
   }
  },
  "engines": {
-  "node": ">=10"
+  "node": ">=10",
+  "npm": ">=6"
  },
  "browserslist": [
   "last 2 versions",
