--- a/app/config/staging.config.json
+++ b/app/config/staging.config.json
@@ -4,6 +4,6 @@
 		"sourceMapMode": "cheap-module-eval-source-map"
 	},
 	"amazonS3": {
-		"keyPrefix": "staging/demo/"
+		"keyPrefix": "staging/"
 	}
 }
