--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -21,6 +21,7 @@ RUN echo Europe/London >/etc/timezone && dpkg-reconfigure -f noninteractive tzda
 WORKDIR /src
 
 # Install our depedencies.
+COPY lib /src/lib
 COPY webpack.config.js /src/webpack.config.js
 COPY package.json /src/package.json
 COPY package-lock.json /src/package-lock.json
