--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
  },
  "author": "Atchai <enquiries@atchai.com> (https://atchai.com)",
  "dependencies": {
+  "@atchai/hippocamp": "file:./lib/hippocamp",
   "aws-sdk": "^2.279.1",
   "body-parser": "^1.18.3",
   "compression": "^1.7.3",
@@ -54,7 +55,7 @@
   "babel-preset-env": "^1.7.0",
   "bson-objectid": "^1.2.2",
   "clean-webpack-plugin": "^0.1.19",
-  "concurrently": "^3.6.0",
+  "concurrently": "^3.6.1",
   "css-loader": "^0.28.10",
   "dialog-polyfill": "^0.4.10",
   "eslint": "^4.18.1",
