--- a/lib/hippocamp/package.json
+++ b/lib/hippocamp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@atchai/hippocamp",
-  "version": "0.10.28",
+  "version": "0.11.0",
   "description": "Chatbot conversation engine.",
   "keywords": [
     "chat",
@@ -37,41 +37,41 @@
     "analytics-node": "^3.3.0",
     "chance": "^1.0.16",
     "cli-color": "^1.2.0",
-    "dashbot": "^9.9.1",
+    "dashbot": "^9.9.2",
     "deep-property": "^1.1.0",
     "deep-sort": "^0.1.2",
     "escape-regexp": "^0.0.1",
     "form-data": "^2.3.2",
     "handlebars": "^4.0.11",
-    "html-minifier": "^3.5.16",
+    "html-minifier": "^3.5.19",
     "jsome": "^2.5.0",
     "longjohn": "^0.2.12",
     "middleware-engine": "^0.1.1",
     "mime": "^2.3.1",
     "mockgoose": "^7.3.5",
     "moment": "^2.22.2",
-    "mongoose": "^4.13.14",
+    "mongoose": "^5.2.5",
     "object-extender": "^2.0.3",
     "request-ninja": "^0.3.2",
     "safe-eval": "^0.3.0",
     "semver": "^5.5.0",
-    "shortid": "^2.2.8"
+    "shortid": "^2.2.12"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "eslint": "^4.19.0",
     "eslint-config-recombix": "latest",
     "eslint-config-vue": "latest",
-    "eslint-plugin-disable": "latest",
-    "eslint-plugin-filenames": "latest",
-    "eslint-plugin-html": "latest",
+    "eslint-plugin-disable": "^1.0.2",
+    "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-html": "^4.0.5",
     "eslint-plugin-json": "latest",
-    "eslint-plugin-node": "latest",
+    "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "latest",
-    "eslint-plugin-vue": "latest",
+    "eslint-plugin-vue": "^4.7.1",
     "mocha": "^5.2.0",
     "ngrok": "^2.3.0",
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.18.3"
   },
   "engines": {
     "node": ">=10",
