--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
  "author": "Atchai <enquiries@atchai.com> (https://atchai.com)",
  "dependencies": {
   "@atchai/hippocamp": "file:./lib/hippocamp",
-  "aws-sdk": "^2.279.1",
+  "aws-sdk": "^2.282.1",
   "body-parser": "^1.18.3",
   "compression": "^1.7.3",
   "config-ninja": "^1.3.2",
@@ -39,7 +39,8 @@
   "request-ninja": "^0.3.2",
   "shortid": "^2.2.12",
   "socket.io": "^2.1.1",
-  "trawler-std": "^0.3.7"
+  "trawler-std": "^0.3.7",
+  "vue-virtual-scroll-list": "^1.2.7"
  },
  "devDependencies": {
   "autoprefixer": "^8.6.5",
