--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
   "concurrently": "^3.6.1",
   "css-loader": "^0.28.10",
   "dialog-polyfill": "^0.4.10",
-  "eslint": "^4.18.1",
-  "eslint-config-recombix": "latest",
+  "eslint": "^5.16.0",
+  "eslint-config-recombix": "0.4.6",
   "eslint-config-vue": "latest",
   "eslint-plugin-disable": "latest",
   "eslint-plugin-filenames": "latest",
