--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -21,4 +21,6 @@ services:
       - /etc/letsencrypt/:/etc/letsencrypt/
     ports:
       - "5002:5008"
-    command: /bin/bash -c "envsubst < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf && exec nginx -g 'daemon off;'"
+    env_file:
+      - .env
+    command: /bin/bash -c "envsubst < /etc/nginx/nginx.conf.template | sed -e 's/§/$$/g' > /etc/nginx/nginx.conf && exec nginx -g 'daemon off;'"
