--- a/nginx/ui-staging.conf
+++ b/nginx/ui-staging.conf
@@ -11,7 +11,7 @@ http {
     location / {
       proxy_pass http://ui:5002;
       proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Upgrade §http_upgrade;
       proxy_set_header Connection "upgrade";
 
       rewrite ^(.*)$ $1 break;
