--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
   ui:
     environment:
       - TZ=Europe/London
+    env_file:
+      - .env
     volumes:
       - ./app:/src/app
       - ./lib:/src/lib
